fixed home two page activity gallery heading title font size and tab alignment for all screen size

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1502,6 +1502,15 @@ img {
        column-gap: 1rem;
 }
 
+.gap-y-1\.5 {
+  row-gap: 0.375rem;
+}
+
+.gap-x-1\.5 {
+  -moz-column-gap: 0.375rem;
+       column-gap: 0.375rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -3586,6 +3595,14 @@ img {
     margin-bottom: 1rem;
   }
 
+  .sm\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .sm\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -3775,6 +3792,11 @@ img {
   .sm\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .sm\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .sm\:pt-14 {
@@ -4135,6 +4157,11 @@ img {
   .md\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .md\:pt-\[2rem\] {
@@ -4560,6 +4587,11 @@ img {
   .lg\:px-1 {
     padding-left: 0.25rem;
     padding-right: 0.25rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .lg\:pr-3\.5 {
